ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: authelia
    meta.helm.sh/release-namespace: security
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "no-store";
      add_header Pragma "no-cache";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-XSS-Protection "1; mode=block";
    kubernetes.io/ingress.local-ip: "192.168.10.60"
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    helm.sh/chart: app-template-3.7.0
    helm.toolkit.fluxcd.io/name: authelia
    helm.toolkit.fluxcd.io/namespace: security
  name: authelia
  namespace: security
spec:
  ingressClassName: external
  rules:
  - host: auth.g-eye.io
    http:
      paths:
      - backend:
          service:
            name: authelia
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.g-eye.io
status:
  loadBalancer:
    ingress:
    - ip: "192.168.10.60"
